Change input box to a textarea to make sure text will wrap as the user types a long message. Apply some more styling.

--- a/contact-app/src/components/ContactForm/ContactForm.css
+++ b/contact-app/src/components/ContactForm/ContactForm.css
@@ -6,6 +6,7 @@
     margin-right: 35%;
     display: flex;
     flex-direction: column;
+    text-align: center;
 
 }
 
@@ -15,4 +16,10 @@
     outline: none;
     border-radius: 12px;
     border: none;
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-bottom: 10px;
+    padding: 5px;
+    font-size: 14pt;
 }
